# splunk_ddss_extractor

./: .gitignore  CLAUDE.md  CLI_USAGE.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docker-build.yml  publish.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
rust/: Cargo.toml
rust/src/: decoder.rs  lib.rs  varint.rs
scripts/: README.md  bump_version.py  demo_compression.py  generate_data.py  process_archive.py  push_hec.sh  recreate_splunk.sh  run_extractor.py  splunk_rehydrate.sh  splunk_vars.sh
src/splunk_ddss_extractor/: __init__.py  __main__.py  async_decoder.py  async_stream.py  compression.py  decoder.py  extractor.py  main.py  native_decoder.py  output_formatters.py  stream.py  utils.py  writers.py
src/splunk_ddss_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_async_decoder.py  test_compression.py  test_decoder.py  test_trace_functionality.py
