[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "splunk-ddss-extractor"
version = "0.3.0"
requires-python = ">=3.8"
dependencies = ["zstandard>=0.22.0", "orjson>=3.9.0"]

[project.optional-dependencies]
s3 = ["boto3>=1.34.0"]
cli = ["click>=8.1.7"]
parquet = ["pyarrow>=14.0.0"]
dev = ["pytest>=7.4.3", "pytest-cov>=4.1.0"]

[project.scripts]
splunk-extract = "splunk_ddss_extractor.main:main"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
module-name = "splunk_ddss_extractor._native"
python-source = "src"
